--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appnope==0.1.0
 blessings==1.6
 decorator==4.0.6
 Django==1.9
+django-debug-toolbar==1.4
 django-extensions==1.6.1
 django-reversion==1.10.0
 djangorestframework==3.3.2
@@ -11,10 +12,15 @@ ipython-genutils==0.1.0
 path.py==8.1.2
 pexpect==4.0.1
 pickleshare==0.5
+progressbar2==3.6.0
 psycopg2==2.6.1
 ptyprocess==0.5
+pytz==2015.7
+requests==2.9.1
+scorched==0.9
 simplegeneric==0.8.1
 six==1.10.0
+sqlparse==0.1.18
 traitlets==4.0.0
 Werkzeug==0.11.3
 wheel==0.24.0
