--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ __pycache__/*
 diamm/diamm_data/migrations/*
 diamm/static/stylesheets/styles.css
 diamm/static/stylesheets/styles.css.map
+solr/data
