--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ Django==1.9
 django-debug-toolbar==1.4
 django-debug-toolbar-template-profiler==1.0.1
 django-extensions==1.6.1
-django-jinja==2.1.1
 django-reversion==1.10.0
 djangorestframework==3.3.2
+drf-ujson==1.2
 gnureadline==6.3.3
 ipython==4.0.1
 ipython-genutils==0.1.0
@@ -19,6 +19,7 @@ pickleshare==0.5
 progressbar2==3.6.0
 psycopg2==2.6.1
 ptyprocess==0.5
+pysolr==3.3.3
 pytz==2015.7
 requests==2.9.1
 scorched==0.9
@@ -26,5 +27,6 @@ simplegeneric==0.8.1
 six==1.10.0
 sqlparse==0.1.18
 traitlets==4.0.0
+ujson==1.35
 Werkzeug==0.11.3
 wheel==0.24.0
