Add Jinja2 for templating

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ Django==1.9
 django-debug-toolbar==1.4
 django-debug-toolbar-template-profiler==1.0.1
 django-extensions==1.6.1
+django-jinja==2.1.1
 django-reversion==1.10.0
 djangorestframework==3.3.2
 drf-ujson==1.2
 gnureadline==6.3.3
 ipython==4.0.1
 ipython-genutils==0.1.0
+Jinja2==2.8
 MarkupSafe==0.23
 model-mommy==1.2.6
 path.py==8.1.2
