Update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ solr/data
 diamm/diamm_site/migrations
 diamm/static/javascripts/jspm_packages
 diamm/static/javascripts/node_modules
+diamm/static/javascripts/dist
+testing
