--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 appnope==0.1.0
 blessings==1.6
-decorator==4.0.6
-Django==1.9
+decorator==4.0.9
+Django==1.9.2
 django-debug-toolbar==1.4
 django-debug-toolbar-template-profiler==1.0.1
 django-extensions==1.6.1
-django-jinja==2.1.1
+django-jinja==2.1.2
 django-pagedown==0.1.1
-django-reversion==1.10.0
+django-reversion==1.10.1
 djangorestframework==3.3.2
 drf-ujson==1.2
 gnureadline==6.3.3
+gunicorn==19.4.5
 ipython==4.0.1
 ipython-genutils==0.1.0
 Jinja2==2.8
@@ -23,14 +24,14 @@ pickleshare==0.5
 progressbar2==3.6.0
 psycopg2==2.6.1
 ptyprocess==0.5
-pysolr==3.3.3
+pysolr==3.4.0
 pytz==2015.7
 requests==2.9.1
-scorched==0.9
+serpy==0.1.0
 simplegeneric==0.8.1
 six==1.10.0
 sqlparse==0.1.18
-traitlets==4.0.0
+traitlets==4.1.0
 ujson==1.35
-Werkzeug==0.11.3
+Werkzeug==0.11.4
 wheel==0.24.0
