--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 appnope==0.1.0
 blessings==1.6
 decorator==4.0.9
-Django==1.9.2
+Django==1.9.4
 django-debug-toolbar==1.4
 django-debug-toolbar-template-profiler==1.0.1
 django-extensions==1.6.1
 django-jinja==2.1.2
 django-pagedown==0.1.1
 django-reversion==1.10.1
-djangorestframework==3.3.2
+djangorestframework==3.3.3
 drf-ujson==1.2
 gnureadline==6.3.3
 gunicorn==19.4.5
-ipython==4.0.1
+ipython==4.1.2
 ipython-genutils==0.1.0
 Jinja2==2.8
 markdown2==2.3.0
@@ -20,18 +20,22 @@ MarkupSafe==0.23
 model-mommy==1.2.6
 path.py==8.1.2
 pexpect==4.0.1
-pickleshare==0.5
-progressbar2==3.6.0
+pickleshare==0.6
+progressbar2==3.6.2
 psycopg2==2.6.1
-ptyprocess==0.5
+ptyprocess==0.5.1
+pudb==2015.4.1
+Pygments==2.1.1
+pygraphviz==1.3.1
 pysolr==3.4.0
-pytz==2015.7
+pytz==2016.1
 requests==2.9.1
 serpy==0.1.0
 simplegeneric==0.8.1
 six==1.10.0
 sqlparse==0.1.18
+tkreadonly==0.6.0
 traitlets==4.1.0
 ujson==1.35
+urwid==1.3.1
 Werkzeug==0.11.4
-wheel==0.24.0
