--- a/requirements.txt
+++ b/requirements.txt
@@ -27,10 +27,17 @@ ptyprocess==0.5.1
 pudb==2015.4.1
 Pygments==2.1.1
 pygraphviz==1.3.1
-pysolr==3.4.0
+# When pysolr can work with child documents this can be removed.
+# pysolr==3.4.0
+git+https://github.com/ahankinson/pysolr@fix-child-documents#egg=pysolr
+
 pytz==2016.1
 requests==2.9.1
-serpy==0.1.0
+
+# When a new release on PyPI appears, this can be removed.
+# serpy==0.1.0
+git+https://github.com/clarkduvall/serpy#egg=serpy
+
 simplegeneric==0.8.1
 six==1.10.0
 sqlparse==0.1.18
