--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,49 @@
+aiohttp==0.21.6
 appnope==0.1.0
+backports.shutil-get-terminal-size==1.0.0
 blessings==1.6
-decorator==4.0.9
-Django==1.9.4
+chardet==2.3.0
+decorator==4.0.10
+Django==1.9.7
 django-debug-toolbar==1.4
 django-debug-toolbar-template-profiler==1.0.1
-django-extensions==1.6.1
-django-jinja==2.1.2
+django-extensions==1.6.7
+django-jinja==2.1.3
+django-markdown==0.8.4
 django-pagedown==0.1.1
-django-reversion==1.10.1
+django-reversion==2.0.4
 djangorestframework==3.3.3
 drf-ujson==1.2
 gnureadline==6.3.3
-gunicorn==19.4.5
-ipython==4.1.2
+gunicorn==19.6.0
+ipython==4.2.0
 ipython-genutils==0.1.0
 Jinja2==2.8
-markdown2==2.3.0
+Markdown==2.6.6
+markdown2==2.3.1
 MarkupSafe==0.23
 model-mommy==1.2.6
-path.py==8.1.2
-pexpect==4.0.1
-pickleshare==0.6
-progressbar2==3.6.2
+path.py==8.2.1
+pexpect==4.1.0
+pickleshare==0.7.2
+progressbar2==3.9.1
 psycopg2==2.6.1
 ptyprocess==0.5.1
-pudb==2015.4.1
-Pygments==2.1.1
-
-# When pysolr can work with child documents this can be removed.
-# pysolr==3.4.0
-git+https://github.com/ahankinson/pysolr@fix-child-documents#egg=pysolr
-
-pytz==2016.1
-requests==2.9.1
-
-# When a new release on PyPI appears, this can be removed.
-# serpy==0.1.0
-git+https://github.com/clarkduvall/serpy#egg=serpy
-
+pudb==2016.2
+Pygments==2.1.3
+pygraphviz==1.3.1
+pysolr==3.5.0
+python-utils==2.0.0
+pytz==2016.4
+pyzmq==15.2.0
+requests==2.10.0
+serpy==0.1.1
 simplegeneric==0.8.1
 six==1.10.0
-sqlparse==0.1.18
+sqlparse==0.1.19
+statprof==0.1.2
 tkreadonly==0.6.0
-traitlets==4.1.0
+traitlets==4.2.1
 ujson==1.35
 urwid==1.3.1
-Werkzeug==0.11.4
+Werkzeug==0.11.10
