--- a/diamm/settings_local.py.template
+++ b/diamm/settings_local.py.template
@@ -15,3 +15,10 @@ GOOGLE_RECAPTCHA_ADDRESS = ""
 
 # SECURITY WARNING: keep the secret key used in production secret!
 SECRET_KEY = ''
+
+EMAIL_USE_TLS = True
+EMAIL_BACKEND = "django.core.mail.backends.smtp.EmailBackend"
+EMAIL_HOST = ""
+EMAIL_HOST_USER = ""
+EMAIL_HOST_PASSWORD = ""
+EMAIL_PORT = 587
