--- a/diamm/settings_local.py.template
+++ b/diamm/settings_local.py.template
@@ -16,6 +16,7 @@ GOOGLE_RECAPTCHA_ADDRESS = ""
 # SECURITY WARNING: keep the secret key used in production secret!
 SECRET_KEY = ''
 
+DEFAULT_FROM_EMAIL = ""
 EMAIL_USE_TLS = True
 EMAIL_BACKEND = "django.core.mail.backends.smtp.EmailBackend"
 EMAIL_HOST = ""
