--- a/diamm/frontend/browse/package.json
+++ b/diamm/frontend/browse/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   }
 }
