--- a/diamm/frontend/browse/package.json
+++ b/diamm/frontend/browse/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "build": "node_modules/.bin/webpack",
-    "eslint:watch": "fswatch src/ | xargs -n 1 eslint",
+    "build:watch": "node_modules/.bin/webpack-dev-server --progress --colors",
+    "eslint:watch": "node_modules/.bin/esw --watch --color",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -14,7 +15,8 @@
     "eslint": "^3.1.1",
     "eslint-plugin-react": "^5.2.2",
     "eslint-watch": "^2.1.13",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "react": "^15.2.1",
