New: Typescript for source and search pages
This commit adds two new react / redux / typescript apps for search and source views.

--- a/diamm/static/apps/source/tsconfig.json
+++ b/diamm/static/apps/source/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "compileOnSave": false,
+  "buildOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/",
     "sourceMap": true,
@@ -10,5 +12,9 @@
   "files": [
     "../typings/index.d.ts",
     "./src/app.tsx"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
