--- a/diamm/static/apps/package.json
+++ b/diamm/static/apps/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "diamm",
+  "name": "apps",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,18 +8,28 @@
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "webpack": "^1.13.3"
+  },
   "dependencies": {
-    "@types/redux-thunk": "^2.1.31",
-    "classnames": "^2.2.5",
+    "diva.js": "^5.0.0",
+    "history": "^3.2.1",
+    "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.1.1",
+    "json-loader": "^0.5.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-markdown": "^2.4.2",
     "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0"
-  },
-  "devDependencies": {
-    "source-map-loader": "^0.1.5",
-    "ts-loader": "^0.8.2"
   }
 }
