--- a/diamm/static/apps/package.json
+++ b/diamm/static/apps/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "webpack --progress --colors --watch",
+    "build": "webpack --progress --colors --optimize-minimize --optimize-occurrence-order --optimize-dedupe"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,8 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
+    "lodash": "^4.17.2",
+    "lodash.debounce": "^4.0.8",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-markdown": "^2.4.2",
@@ -30,6 +33,8 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.4",
+    "whatwg-fetch": "^2.0.0"
   }
 }
