--- a/diamm/static/apps/package.json
+++ b/diamm/static/apps/package.json
@@ -12,29 +12,36 @@
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
     "webpack": "^1.13.3"
   },
   "dependencies": {
+    "babel-loader": "^6.2.8",
     "diva.js": "^5.0.0",
+    "exports-loader": "^0.6.3",
     "history": "^3.2.1",
-    "isomorphic-fetch": "^2.2.1",
+    "imports-loader": "^0.6.5",
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
     "lodash": "^4.17.2",
     "lodash.debounce": "^4.0.8",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "^15.4.1",
+    "react-addons-create-fragment": "^15.4.1",
+    "react-autocomplete": "^1.4.0",
+    "react-dom": "^15.4.1",
     "react-markdown": "^2.4.2",
-    "react-redux": "^4.4.5",
+    "react-paginate": "^2.2.3",
+    "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
-    "whatwg-fetch": "^2.0.0"
+    "url-search-params": "^0.6.1",
+    "whatwg-fetch": "^2.0.1"
   }
 }
