Add ability to re-fetch image metadata from server

--- a/diamm/settings_local.py.template
+++ b/diamm/settings_local.py.template
@@ -9,6 +9,7 @@ MEDIA_ROOT = os.path.join(
 STATIC_ROOT = "/srv/www/{0}/static".format(HOSTNAME)
 LEGACY_IMAGE_DIR = ""
 IMAGE_DIR = ''
+DIAMM_IMAGE_KEY = ""
 
 GOOGLE_RECAPTCHA_SECRET = ""
 GOOGLE_RECAPTCHA_ADDRESS = ""
