--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,25 @@
 aiohttp==1.1.6
+appdirs==1.4.3
 appnope==0.1.0
 async-timeout==1.1.0
 backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.5.1
+beautifulsoup4==4.5.3
 blessings==1.6
 chardet==2.3.0
 decorator==4.0.10
-Django==1.10.4
+Django==1.10.6
 django-debug-toolbar==1.6
 django-debug-toolbar-template-profiler==1.0.1
 django-extensions==1.7.5
 django-jinja==2.2.1
 django-markdown==0.8.4
-django-modelcluster==2.0
+django-modelcluster==3.0.1
 django-pagedown==0.1.1
 django-registration==2.2
 django-reversion==2.0.8
-django-taggit==0.18.3
+django-taggit==0.22.0
 django-treebeard==4.1.0
-djangorestframework==3.5.3
+djangorestframework==3.6.2
 drf-ujson==1.2
 gnureadline==6.3.3
 gunicorn==19.6.0
@@ -32,22 +33,24 @@ markdown2==2.3.2
 MarkupSafe==0.23
 model-mommy==1.3.1
 multidict==2.1.4
+olefile==0.44
+packaging==16.8
 path.py==9.0
 pexpect==4.2.1
 pickleshare==0.7.4
-Pillow==3.4.2
+Pillow==4.0.0
 progressbar2==3.11.0
 prompt-toolkit==1.0.9
 psycopg2==2.6.2
 ptyprocess==0.5.1
 pudb==2016.2
 Pygments==2.1.3
-pygraphviz==1.3.1
+pyparsing==2.2.0
 pysolr==3.6.0
 python-utils==2.0.1
 pytz==2016.10
 pyzmq==16.0.2
-requests==2.12.4
+requests==2.13.0
 serpy==0.1.1
 simplegeneric==0.8.1
 six==1.10.0
@@ -56,9 +59,9 @@ statprof==0.1.2
 tkreadonly==0.6.0
 traitlets==4.3.1
 ujson==1.35
-Unidecode==0.4.19
+Unidecode==0.4.20
 urwid==1.3.1
-wagtail==1.8
+wagtail==1.9
 wcwidth==0.1.7
 webencodings==0.5
 Werkzeug==0.11.11
