--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-jinja==2.2.1
 django-markdown==0.8.4
 django-modelcluster==3.0.1
 django-pagedown==0.1.1
+django-pylibmc==0.6.1
 django-registration==2.2
 django-reversion==2.0.8
 django-taggit==0.22.0
@@ -45,6 +46,7 @@ psycopg2==2.6.2
 ptyprocess==0.5.1
 pudb==2016.2
 Pygments==2.1.3
+pylibmc==1.5.2
 pyparsing==2.2.0
 pysolr==3.6.0
 python-utils==2.0.1
