--- a/diamm/settings_local.py.template
+++ b/diamm/settings_local.py.template
@@ -21,6 +21,7 @@ GOOGLE_RECAPTCHA_ADDRESS = ""
 SECRET_KEY = ''
 # Registration Activation Salt
 REGISTRATION_SALT = ""
+ACCOUNT_ACTIVATION_DAYS = 7
 
 EMAIL_USE_TLS = True
 EMAIL_BACKEND = "django.core.mail.backends.smtp.EmailBackend"
