New: Add a User Agent for internal DIAMM requests

--- a/diamm/settings_local.py.template
+++ b/diamm/settings_local.py.template
@@ -13,6 +13,7 @@ STATIC_ROOT = "/srv/www/{0}/static".format(HOSTNAME)
 LEGACY_IMAGE_DIR = ""
 IMAGE_DIR = ''
 DIAMM_IMAGE_KEY = ""
+DIAMM_UA = ""
 
 GOOGLE_RECAPTCHA_SECRET = ""
 GOOGLE_RECAPTCHA_ADDRESS = ""
