--- a/diamm/static/apps/package.json
+++ b/diamm/static/apps/package.json
@@ -23,7 +23,6 @@
   "dependencies": {
     "babel-loader": "^6.2.8",
     "classnames": "^2.2.5",
-    "dateformat": "^2.0.0",
     "diva.js": "^5.1.2",
     "exports-loader": "^0.6.3",
     "history": "^3.2.1",
@@ -34,6 +33,7 @@
     "json-loader": "^0.5.4",
     "lodash": "^4.17.2",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.18.1",
     "react": "^15.4.1",
     "react-addons-create-fragment": "^15.4.1",
     "react-autocomplete": "^1.4.0",
