--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,78 @@
-aiohttp==1.1.6
+aiohttp==2.2.3
 appdirs==1.4.3
 appnope==0.1.0
-async-timeout==1.1.0
+async-timeout==1.2.1
 backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.5.3
+beautifulsoup4==4.6.0
 blessings==1.6
-chardet==2.3.0
-decorator==4.0.10
-Django==1.10.6
-django-debug-toolbar==1.6
-django-debug-toolbar-template-profiler==1.0.1
-django-extensions==1.7.5
-django-jinja==2.2.1
+certifi==2017.4.17
+chardet==3.0.4
+colorclass==2.2.0
+decorator==4.1.1
+Django==1.11.3
+django-extensions==1.8.1
+django-formtools==2.0
+django-jinja==2.3.1
 django-markdown==0.8.4
-django-modelcluster==3.0.1
-django-pagedown==0.1.1
+django-modelcluster==3.1
+django-pagedown==0.1.3
 django-pylibmc==0.6.1
 django-registration==2.2
-django-reversion==2.0.8
-django-taggit==0.22.0
-django-treebeard==4.1.0
-djangorestframework==3.6.2
+django-reversion==2.0.9
+django-salmonella==1.0
+django-taggit==0.22.1
+django-treebeard==4.1.2
+djangorestframework==3.6.3
+docopt==0.6.2
 drf-ujson==1.2
 gnureadline==6.3.3
-gunicorn==19.6.0
+gunicorn==19.7.1
 html2text==2016.9.19
 html5lib==0.999999999
-ipython==5.1.0
-ipython-genutils==0.1.0
-Jinja2==2.8
-Markdown==2.6.7
-markdown2==2.3.2
-MarkupSafe==0.23
-model-mommy==1.3.1
-multidict==2.1.4
+idna==2.5
+ipython==6.1.0
+ipython-genutils==0.2.0
+jedi==0.10.2
+Jinja2==2.9.6
+Markdown==2.6.8
+markdown2==2.3.4
+MarkupSafe==1.0
+model-mommy==1.3.2
+multidict==3.1.3
 olefile==0.44
 packaging==16.8
-path.py==9.0
+path.py==10.3.1
 pexpect==4.2.1
 pickleshare==0.7.4
-Pillow==4.0.0
-progressbar2==3.11.0
-prompt-toolkit==1.0.9
-psycopg2==2.6.2
-ptyprocess==0.5.1
-pudb==2016.2
-Pygments==2.1.3
+Pillow==4.2.1
+pip-upgrader==1.4.2
+progressbar2==3.30.2
+prompt-toolkit==1.0.14
+psycopg2==2.7.1
+ptyprocess==0.5.2
+Pygments==2.2.0
 pylibmc==1.5.2
 pyparsing==2.2.0
 pysolr==3.6.0
-python-utils==2.0.1
-pytz==2016.10
+python-utils==2.1.0
+pytz==2017.2
 pyzmq==16.0.2
-requests==2.13.0
+requests==2.18.1
 -e git+https://github.com/ahankinson/serpy.git@84e451ce9586ef0703bfb7edb98115210d35b321#egg=serpy
 simplegeneric==0.8.1
 six==1.10.0
-sqlparse==0.2.2
+sqlparse==0.2.3
 statprof==0.1.2
-tkreadonly==0.6.0
-traitlets==4.3.1
+terminaltables==3.1.0
+tkreadonly==0.6.1
+traitlets==4.3.2
 ujson==1.35
 Unidecode==0.4.20
+urllib3==1.21.1
 urwid==1.3.1
-wagtail==1.9
+wagtail==1.11.1
 wcwidth==0.1.7
-webencodings==0.5
-Werkzeug==0.11.11
+webencodings==0.5.1
+Werkzeug==0.12.2
 Willow==0.4
-yarl==0.8.1
+yarl==0.12.0
