--- a/requirements.txt
+++ b/requirements.txt
@@ -8,16 +8,17 @@ blessings==1.6
 certifi==2017.7.27.1
 chardet==3.0.4
 colorclass==2.2.0
+confusable-homoglyphs==2.0.2
 decorator==4.1.2
-Django==1.11.4
-django-extensions==1.9.0
+Django==1.11.5
+django-extensions==1.9.1
 django-formtools==2.0
 django-jinja==2.4.0
 django-markdown==0.8.4
 django-modelcluster==3.1
 django-pagedown==0.1.3
 django-pylibmc==0.6.1
-django-registration==2.2
+django-registration==2.3
 django-reversion==2.0.10
 django-salmonella==1.1
 django-taggit==0.22.1
@@ -58,9 +59,9 @@ python-utils==2.2.0
 pytz==2017.2
 pyzmq==16.0.2
 requests==2.18.4
-serpy==0.1.1
+git+git://github.com/ahankinson/serpy@fix-required-keyerror#egg=serpy
 simplegeneric==0.8.1
-six==1.10.0
+six==1.11.0
 sqlparse==0.2.3
 statprof==0.1.2
 terminaltables==3.1.0
@@ -70,9 +71,9 @@ ujson==1.35
 Unidecode==0.4.21
 urllib3==1.22
 urwid==1.3.1
-wagtail==1.12.1
+wagtail==1.12.2
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.12.2
-Willow==1.0
+Willow==0.4
 yarl==0.12.0
