--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,36 @@
-aiohttp==2.2.5
-appdirs==1.4.3
-appnope==0.1.0
-async-timeout==1.3.0
-backports.shutil-get-terminal-size==1.0.0
 beautifulsoup4==4.6.0
-blessings==1.6
-certifi==2017.7.27.1
+certifi==2018.4.16
 chardet==3.0.4
-colorclass==2.2.0
-confusable-homoglyphs==2.0.2
-decorator==4.1.2
-Django==1.11.5
-django-extensions==1.9.1
-django-formtools==2.0
-django-jinja==2.4.0
-django-markdown==0.8.4
-django-modelcluster==3.1
-django-pagedown==0.1.3
-django-pylibmc==0.6.1
-django-registration==2.3
-django-reversion==2.0.10
-django-salmonella==1.1
-django-taggit==0.22.1
-django-treebeard==4.1.2
-djangorestframework==3.6.4
-docopt==0.6.2
+confusable-homoglyphs==3.0.0
+Django==2.0.4
+django-dynamic-raw-id==2.4
+django-extensions==2.0.7
+django-jinja==2.4.1
+django-modelcluster==4.1
+django-pagedown==1.0.4
+-e git+https://github.com/ubernostrum/django-registration.git@f957d2824cf77820287da2993fca44d6445c592d#egg=django_registration
+django-reversion==2.0.13
+django-taggit==0.22.2
+django-treebeard==4.3
+djangorestframework==3.8.2
+draftjs-exporter==2.0.0
 drf-ujson==1.2
-gnureadline==6.3.3
-gunicorn==19.7.1
-html2text==2016.9.19
 html5lib==0.999999999
 idna==2.6
-ipython==6.1.0
-ipython-genutils==0.2.0
-jedi==0.10.2
-Jinja2==2.9.6
-Markdown==2.6.9
-markdown2==2.3.4
+Jinja2==2.10
+markdown2==2.3.5
 MarkupSafe==1.0
-model-mommy==1.3.2
-multidict==3.1.3
-olefile==0.44
-packaging==16.8
-path.py==10.4
-pexpect==4.2.1
-pickleshare==0.7.4
-Pillow==4.2.1
-pip-upgrader==1.4.3
-progressbar2==3.34.2
-prompt-toolkit==1.0.15
-psycopg2==2.7.3.1
-ptyprocess==0.5.2
-Pygments==2.2.0
-pylibmc==1.5.2
-pyparsing==2.2.0
-pysolr==3.6.0
-python-utils==2.2.0
-pytz==2017.2
-pyzmq==16.0.2
+Pillow==5.1.0
+psycopg2-binary==2.7.4
+pysolr==3.7.0
+pytz==2018.4
 requests==2.18.4
-git+git://github.com/ahankinson/serpy@fix-required-keyerror#egg=serpy
-simplegeneric==0.8.1
+serpy==0.3.1
 six==1.11.0
-sqlparse==0.2.3
-statprof==0.1.2
-terminaltables==3.1.0
-tkreadonly==0.6.1
-traitlets==4.3.2
 ujson==1.35
 Unidecode==0.4.21
 urllib3==1.22
-urwid==1.3.1
-wagtail==1.12.2
-wcwidth==0.1.7
+wagtail==2.0.1
 webencodings==0.5.1
-Werkzeug==0.12.2
-Willow==0.4
-yarl==0.12.0
+Werkzeug==0.14.1
+Willow==1.1
