--- a/diamm/static/apps/package.json
+++ b/diamm/static/apps/package.json
@@ -12,43 +12,42 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-1": "^6.16.0",
-    "webpack": "^2.3.2"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "webpack": "^3.11.0"
   },
   "dependencies": {
-    "babel-loader": "^6.2.8",
     "classnames": "^2.2.5",
-    "diva.js": "^5.1.2",
-    "exports-loader": "^0.6.3",
-    "history": "^3.2.1",
-    "immutable": "^3.8.1",
-    "imports-loader": "^0.6.5",
-    "jquery": "^3.1.1",
-    "js-cookie": "^2.1.3",
-    "json-loader": "^0.5.4",
-    "lodash": "^4.17.2",
+    "diva.js": "^5.1.3",
+    "exports-loader": "^0.7.0",
+    "history": "^4.7.2",
+    "imports-loader": "^0.8.0",
+    "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
+    "json-loader": "^0.5.7",
+    "lodash": "^4.17.10",
     "lodash.debounce": "^4.0.8",
-    "moment": "^2.18.1",
-    "react": "^15.4.1",
-    "react-addons-create-fragment": "^15.4.1",
-    "react-autocomplete": "^1.4.0",
-    "react-debounce-input": "^2.4.2",
-    "react-dom": "^15.4.1",
-    "react-markdown": "^2.4.2",
-    "react-paginate": "^2.2.3",
-    "react-redux": "^4.4.6",
-    "react-router": "^3.0.0",
-    "react-router-redux": "^4.0.7",
-    "redux": "^3.6.0",
-    "redux-logger": "^2.7.4",
-    "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.4",
-    "url-search-params": "^0.6.1",
-    "whatwg-fetch": "^2.0.1"
+    "moment": "^2.22.1",
+    "react": "^16.3.2",
+    "react-addons-create-fragment": "^15.6.2",
+    "react-autocomplete": "^1.8.1",
+    "react-debounce-input": "^3.2.0",
+    "react-dom": "^16.3.2",
+    "react-markdown": "^3.3.0",
+    "react-paginate": "^5.2.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
+    "url-search-params": "^0.10.0",
+    "whatwg-fetch": "^2.0.4"
   }
 }
