--- a/diamm/static/apps/package.json
+++ b/diamm/static/apps/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.10",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.22.1",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-addons-create-fragment": "^15.6.2",
     "react-autocomplete": "^1.8.1",
