--- a/diamm/static/apps/package.json
+++ b/diamm/static/apps/package.json
@@ -43,7 +43,8 @@
     "react-paginate": "^5.2.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
-    "react-router-redux": "^4.0.8",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
