--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = ""
 authors = ["Andrew Hankinson <andrew.hankinson@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-django = "^2.2.11"
+python = "^3.6"
+django = "~=3.0"
 wagtail = "^2.8"
 djangorestframework = "^3.11.0"
 django-extensions = "^2.2.9"
