--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,10 @@ authors = ["Andrew Hankinson <andrew.hankinson@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 django = "~=3.0"
-wagtail = "^4.0"
 djangorestframework = "^3.11.0"
 django-extensions = "^2.2.9"
 werkzeug = "^1.0.0"
-django-registration = "^3.1"
+django-registration = "3.2"
 django-dynamic-raw-id = "^2.6"
 jinja2 = "^3.0"
 django-jinja = "^2.6.0"
@@ -24,9 +23,12 @@ serpy = "^0.3.1"
 markdown2 = "^2.3.8"
 gunicorn = "^20.0.4"
 blessings = "^1.7"
-ipython = "^7.13.0"
+wagtail = "2.15"
 
 [tool.poetry.dev-dependencies]
+
+[tool.poetry.group.dev.dependencies]
+ipython = "7.34"
 
 [build-system]
 requires = ["poetry>=0.12"]
