--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ django-extensions = "^2.2.9"
 werkzeug = "^1.0.0"
 django-registration = "3.2"
 django-dynamic-raw-id = "^2.6"
-jinja2 = "^3.0"
+jinja2 = "3.0.3"
 django-jinja = "^2.6.0"
 pysolr = "^3.8.1"
 django-pagedown = "^2.0.3"
@@ -24,9 +24,10 @@ markdown2 = "^2.3.8"
 gunicorn = "^20.0.4"
 blessings = "^1.7"
 wagtail = "2.15.2"
+tablib = "3.1.0"
 
 [tool.poetry.dev-dependencies]
-ipython = "7.34"
+ipython = "7.16.2"
 
 
 [build-system]
