--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ gunicorn = "^20.0.4"
 blessings = "^1.7"
 wagtail = "2.15.2"
 tablib = "3.1.0"
+requests = "2.27.1"
 
 [tool.poetry.dev-dependencies]
 ipython = "7.16.2"
