--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ blessings = "^1.7"
 wagtail = "2.15.2"
 tablib = "3.1.0"
 requests = "2.27.1"
+traitlets = "^4.3"
+pillow = "^8.4"
+markupsafe = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 ipython = "7.16.2"
