--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,14 @@ description = ""
 authors = ["Andrew Hankinson <andrew.hankinson@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.9"
 django = "~=3.0"
 djangorestframework = "^3.11.0"
 django-extensions = "^2.2.9"
 werkzeug = "^1.0.0"
 django-registration = "3.2"
 django-dynamic-raw-id = "^2.6"
-jinja2 = "3.0.3"
+jinja2 = "^3.0.3"
 django-jinja = "^2.6.0"
 pysolr = "^3.8.1"
 django-pagedown = "^2.0.3"
@@ -23,11 +23,11 @@ serpy = "^0.3.1"
 markdown2 = "^2.3.8"
 gunicorn = "^20.0.4"
 blessings = "^1.7"
-wagtail = "2.15.2"
+wagtail = "^3.0"
 tablib = "3.1.0"
-requests = "2.27.1"
+requests = "^2.27.1"
 traitlets = "^4.3"
-pillow = "8.4.0"
+pillow = "^8.4.0"
 markupsafe = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
