--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,11 @@ markdown2 = "^2.3.8"
 gunicorn = "^20.0.4"
 blessings = "^1.7"
 ipython = "^7.13.0"
+tablib = "3.1.0"
+requests = "^2.27.1"
+traitlets = "^4.3"
+pillow = "^8.4.0"
+markupsafe = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 
