Fixed: Upgrade to Django 4

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,24 +5,23 @@ description = ""
 authors = ["Andrew Hankinson <andrew.hankinson@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-django = "~=3.0"
-wagtail = "^3.0"
+python = "^3.8"
+django = "~=4.0"
+wagtail = "^5.0"
 djangorestframework = "^3.11.0"
-django-extensions = "^2.2.9"
-werkzeug = "^1.0.0"
+django-extensions = "^3.0"
+werkzeug = "^2.0.0"
 django-registration = "^3.1"
-django-dynamic-raw-id = "^2.6"
+django-dynamic-raw-id = "^3.0"
 jinja2 = "^3.0"
 django-jinja = "^2.6.0"
 pysolr = "^3.8.1"
 django-pagedown = "^2.0.3"
-django-reversion = "^3.0.7"
-psycopg2-binary = "^2.8.4"
-ujson = "^2.0.3"
+django-reversion = "^5.0"
+ujson = "^5.0"
 serpy = "^0.3.1"
 markdown2 = "^2.3.8"
-gunicorn = "^20.0.4"
+gunicorn = "^20.1.0"
 blessings = "^1.7"
 ipython = "^7.13.0"
 tablib = "3.1.0"
@@ -30,6 +29,7 @@ requests = "^2.27.1"
 traitlets = "^4.3"
 pillow = "^8.4.0"
 markupsafe = "^2.0.1"
+psycopg = "^3.1.9"
 
 [tool.poetry.dev-dependencies]
 
