Pin requests module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ gunicorn = "^20.1.0"
 blessings = "^1.7"
 ipython = "^7.13.0"
 tablib = "3.1.0"
-requests = "^2.27.1"
+requests = "2.29.0"
 traitlets = "^4.3"
 pillow = "^8.4.0"
 markupsafe = "^2.0.1"
