--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ psycopg = "^3.1.9"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.group.dev.dependencies]
+django-debug-toolbar = "^4.1.0"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
