--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ testing
 env
 /.idea
 /diamm/settings_local.py
+/diamm/auth_local.py
 /diamm/static/apps/node_modules
 /diamm/static/apps/typings
 /diamm/static/apps/source/dist
