--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ requires-poetry = '>=2.0,<3.0'
 [tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "^4.1.0"
 django-stubs = "^5.1.2"
+pydot = "^3.0.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
