--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@ dependencies = [
     'blessings (>=1.7,<2.0)', 'ipython (>=8.24.0,<9.0.0)',
     'tablib (>=3.5.0,<4.0.0)', 'requests (==2.32.3)',
     'traitlets (>=5.14.3,<6.0.0)', 'Pillow (>=10.0,<11.0)',
-    'markupsafe (>=3.0.1,<4.0.0)', 'psycopg (>=3.1.9,<4.0.0)',
+    'markupsafe (>=3.0.1,<4.0.0)',
     'werkzeug (>=3.0.3,<4.0.0)',
-    'httpx (>=0.28.1,<0.29.0)']
+    'httpx (>=0.28.1,<0.29.0)',
+    "psycopg[pool] (>=3.2.6,<4.0.0)"]
 
 [tool.poetry]
 requires-poetry = '>=2.0,<3.0'
