--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ requires-poetry = '>=2.0,<3.0'
 django-debug-toolbar = "^4.1.0"
 django-stubs = "^5.1.2"
 pydot = "^3.0.4"
+mypy = "^1.15.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
