WIP: search and brokensong updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "werkzeug (>=3.0.3,<4.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
     "psycopg[pool] (>=3.2.6,<4.0.0)",
+    "sentry-sdk[django]>=2.41.0",
 ]
 package-mode = false
 
