--- a/search-app/package.json
+++ b/search-app/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "develop": "chokidar 'src/**/*.elm' -c 'clear && elm make src/Main.elm --debug --output=dist/search.js'",
+    "develop": "chokidar 'src/**/*.elm' -c 'clear && lamdera make --no-wire src/Main.elm --debug --output=dist/search.js'",
     "production": "./optimize.sh src/Main.elm dist/search.js dist/search.js",
     "deploy": "cp dist/search.js ../diamm/static/apps/search/"
   },
