--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,6 @@ dependencies = [
     "django-pagedown (>=2.0.3,<3.0.0)",
     "django-reversion (>=5.0,<6.0)",
     "ujson (>=5.0,<6.0)",
-    "serpy (>=0.3.1,<0.4.0)",
     "markdown2 (>=2.3.8,<3.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
     "blessings (>=1.7,<2.0)",
@@ -30,6 +29,7 @@ dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
     "psycopg[pool] (>=3.2.6,<4.0.0)",
     "sentry-sdk[django]>=2.41.0",
+    "ypres",
 ]
 package-mode = false
 
@@ -43,6 +43,9 @@ dev = [
 
 [tool.uv]
 package = false
+
+[tool.uv.sources]
+ypres = { git = "https://github.com/rism-digital/ypres.git" }
 
 [build-system]
 requires = ["hatchling"]
