--- a/search-app/.swcrc
+++ b/search-app/.swcrc
@@ -8,9 +8,11 @@
             "pure_getters": true,
             "unsafe_comps": true,
             "unsafe": true,
+            "drop_console": true
         },
         "mangle": {
-            "reserved": [ "F2", "F3", "F4", "F5", "F6", "F7", "F8", "F9", "A2", "A3", "A4", "A5", "A6", "A7", "A8", "A9"],
+            "keep_fnames": false,
+            "reserved": [ "F2", "F3", "F4", "F5", "F6", "F7", "F8", "F9", "A2", "A3", "A4", "A5", "A6", "A7", "A8", "A9"]
         }
     }
 }}
